Update react bootstrap. Working server.

--- a/react/src/client/app/styles/components/_global.scss
+++ b/react/src/client/app/styles/components/_global.scss
@@ -129,9 +129,9 @@ p.normal {
 .left { text-align: left; }
 .right { text-align: right; }
 
-.quote-main { background-image: url(../images/quote.svg); }
-.quote-light { background-image: url(../images/quote_light.svg); }
-.quote-dark { background-image: url(../images/quote_dark.svg); }
+.quote-main { background-image: url(../images/icons/quote.svg); }
+.quote-light { background-image: url(../images/icons/quote_light.svg); }
+.quote-dark { background-image: url(../images/icons/quote_dark.svg); }
 
 .quote-icon {
     width: 100px;
